# differential_drive_controller

./: CMakeLists.txt  README.md  differential_drive_plugin.xml  package.xml
include/differential_drive_controller/: custom_validators.hpp  differential_drive_controller.hpp  visibility_control.h
include/differential_drive_controller/control/: differential_drive_drivetrain.hpp  differential_drive_kinematics.hpp  differential_drive_odometry.hpp
include/differential_drive_controller/math/: transform_2d.hpp  translation_2d.hpp  twist_2d.hpp
include/differential_drive_controller/util/: differential_drive_drivetrain.hpp  differential_drive_kinematics.hpp  utility.hpp
include/differential_drive_controller/wheels/: wheel_handle.hpp  wheel_positions.hpp  wheel_speeds.hpp
src/: differential_drive_controller.cpp  differential_drive_controller_parameters.yaml
src/control/: differential_drive_drivetrain.cpp  differential_drive_kinematics.cpp  differential_drive_odometry.cpp
src/math/: transform_2d.cpp  translation_2d.cpp  twist_2d.cpp
src/wheels/: wheel_handle.cpp  wheel_positions.cpp  wheel_speeds.cpp
test/: test.cpp
